--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.3",
     "glider-js": "^1.7.8",
+    "imagemagick": "^0.1.3",
     "sass": "^1.72.0"
   }
 }
